--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -33,33 +33,33 @@
     "access": "public"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-typescript": "^7.8.3",
+    "@danmarshall/deckgl-typings": "3.4.6",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0",
     "rimraf": "^3.0.0",
     "ts-jest": "^24.1.0",
-    "tslint": "^5.20.0",
-    "@babel/core":"7.8.7",
-    "@babel/cli": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
     "ts-loader": "^6.2.1",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.3",
-    "@danmarshall/deckgl-typings": "3.4.6"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "@carto/toolkit-core": "^0.0.1-rc.16",
     "@carto/toolkit-maps": "^0.0.1-rc.16",
     "@deck.gl/core": "^8.1.0",
-    "@deck.gl/layers": "^8.1.0",
     "@deck.gl/geo-layers": "^8.1.0",
+    "@deck.gl/layers": "^8.1.0",
     "@deck.gl/mesh-layers": "^8.1.0",
     "@luma.gl/core": "^8.1.0",
     "@mapbox/vector-tile": "^1.3.1",
-    "pbf": "3.2.1",
-    "cartocolor": "^4.0.2"
+    "cartocolor": "^4.0.2",
+    "pbf": "3.2.1"
   }
 }
